samples/_failures_safe/1761549132_0d16fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5e11263.c: In function ‘main’:
./samples/SAFE/__tmp_f5e11263.c:162: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_f5e11263.c:161:5: error: expected declaration or statement at end of input
  161 |     if
      |     ^~
